[package]
name = "ogurpchik"
version = "0.1.0"
edition = "2024"
authors = ["ignatternyev54@gmail.com"]
license = "MIT"
description = "A transport-agnostic RPC framework for stream and memory-based communication. Built with high-performance primitives to deliver medium-performance results."
keywords = ["rpc", "windows", "vsock", "linux"]

[dependencies]
rkyv = { version = "0.8.14", features = ["bytecheck", "std"] }
compio = { version = "0.18.0", features = ["net", "io-compat", "process", "macros", "time"] }
socket2 = "0.6.2"
windows = { version = "0.61.3", features = [
    "Win32_System_Performance",
    "Win32_NetworkManagement", "Win32_NetworkManagement_IpHelper", "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock", "Win32_System_Threading", "Win32_System_Hypervisor"] }

anyhow = "1.0.100"
tracing = { version = "0.1.44", features = ["release_max_level_warn"] }
futures = "0.3.31"
tracing-subscriber = "0.3.22"
bytes = "1.11.1"
libc = "1.0.0-alpha.2"
dhat = { version = "0.3", optional = true }
flume = { version = "0.12.0", features = ["async"] }
dashmap = "6.1.0"
affinity = "0.1.2"
num_cpus = "1.17.0"
oneshot = "0.1.13"
smallvec = "1.15.1"

[profile.release]
debug = true
split-debuginfo = "packed"

[features]
dhat-heap = ["dep:dhat"]

[dev-dependencies]
hdrhistogram = "7.5.4"